[gd_scene load_steps=4 format=2]

[ext_resource path="res://subscenes/maps/add_map.gd" type="Script" id=1]
[ext_resource path="res://themes_fonts/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/folder-button.png" type="Texture2D" id=4]

[node name="NewMap" type="Window"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 30.0
offset_right = -10.0
offset_bottom = -10.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -60.0
size_flags_horizontal = 3

[node name="Name" type="HSplitContainer" parent="Container"]
offset_right = 524.0
offset_bottom = 46.0
size_flags_horizontal = 0

[node name="Label" type="Label" parent="Container/Name"]
offset_top = 5.0
offset_right = 162.0
offset_bottom = 41.0
text = "Map name:"

[node name="LineEdit" type="LineEdit" parent="Container/Name"]
offset_left = 174.0
offset_right = 524.0
offset_bottom = 46.0
custom_minimum_size = Vector2( 350, 0 )
placeholder_text = "Enter the map name"
caret_blink = true
caret_blink_interval = 0.5

[node name="MapRecord" type="GridContainer" parent="Container"]
offset_top = 50.0
offset_right = 1880.0
offset_bottom = 50.0

[node name="Label" type="Label" parent="Container"]
offset_top = 54.0
offset_right = 1880.0
offset_bottom = 90.0
text = "Map icon"

[node name="Image" type="TextureButton" parent="Container"]
offset_top = 94.0
offset_right = 1880.0
offset_bottom = 970.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )

[node name="Buttons" type="HSplitContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -60.0
offset_right = -10.0
offset_bottom = -10.0

[node name="CancelButton" type="Button" parent="Buttons"]
offset_right = 112.0
offset_bottom = 50.0
text = "Cancel"

[node name="SaveButton" type="Button" parent="Buttons"]
offset_left = 124.0
offset_right = 290.0
offset_bottom = 50.0
text = "Add Map"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 20.0
offset_right = -10.0
offset_bottom = -10.0
custom_minimum_size = Vector2( 150, 52.5 )
window_title = "Open a File"
mode = 0
access = 2
filters = PackedStringArray( "*.png", "*.jpg", "*.jpeg" )

[connection signal="text_changed" from="Container/Name/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Container/Image" to="." method="_on_Image_pressed"]
[connection signal="pressed" from="Buttons/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="Buttons/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="popup_hide" from="FileDialog" to="." method="_on_FileDialog_popup_hide"]
